# MidiWeaver

./: README.md  package.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/engine/: pyproject.toml
docs/: dev-setup.md  op-reference.md
docs/planning/: Advanced_Note_Handling_and_Snippet_Protocol.md  MidiWeaver_Rewrite_Plan.md
oldcode/: .gitignore  package-lock.json
oldcode/apps/engine/: pyproject.toml
oldcode/apps/engine/midiweaver/: __init__.py  main.py  settings_store.py
oldcode/apps/engine/midiweaver/ai/: agent.py  ask.py  op_resolve.py  openai_http.py  planner.py  selection.py  tools.py
oldcode/apps/engine/midiweaver/analysis/: __init__.py
oldcode/apps/engine/midiweaver/arrangement/: __init__.py  dj_drums.py
oldcode/apps/engine/midiweaver/audio/: __init__.py
oldcode/apps/engine/midiweaver/normalize/: __init__.py  track_export.py
oldcode/apps/engine/midiweaver/ops/: __init__.py  executor.py
oldcode/apps/engine/midiweaver/project/: store.py
oldcode/apps/engine/midiweaver/query/: __init__.py  context.py
oldcode/apps/engine/tests/: conftest.py  test_analysis.py  test_api.py  test_dj_drums.py  test_export_ai.py  test_op_resolve.py  test_openai_http.py  test_timeline.py  test_tool_compact.py  test_track_export.py
oldcode/docs/: dev-setup.md  op-reference.md
sample-projects/: README.md
sample-projects/fixtures/: song_b.mid  song_c.mid
(+60 files in other folders)
