[package]
name = "midiweaver-desktop"
version = "0.1.0"
description = "MidiWeaver desktop shell"
authors = ["MidiWeaver"]
edition = "2021"

[lib]
name = "midiweaver_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
