[project]
name = "midiweaver-engine"
version = "0.1.0"
description = "MidiWeaver Python sidecar engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "mido>=1.3.2",
    "python-rtmidi>=1.5.8",
    "pretty-midi>=0.2.10",
    "music21>=9.1.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "numpy>=2.1.0",
    "platformdirs>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
midiweaver-engine = "midiweaver.main:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["midiweaver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
